--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.App-body {
+  
+  background-color: #282c34;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App-input {
+  height: calc(10px + 2.8vmin);
+  width: calc(400px + 2vmin);
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  font-size: calc(5px + 1.7vmin);
 }
+.App-input2 {
+  height: calc(10px + 1.5);
+  width: calc(400px + 2vmin);
+  border-radius: 10px;
+  background-color: #282c34;
+  color: white;
+  border: none;
+  padding: 10px;
+  margin-top: 15px;
+  font-size: calc(5px + 1.7vmin);
+}
+.App-input3 {
+  height: calc(8px + 2vmin);
+  width: calc(400px + 2vmin);
+  border-radius: 10px;
+  border: none;
+  padding: 10px;
+  font-size: calc(5px + 1.7vmin);
+}
+
+
+.App-button {
+  background-color: #19bfb5;
+  color: white;
+  border-radius: 10px;
+  font-size: 20px;
+  margin-left: 12px;
+  margin-top: calc(10px + 2vmin);
+  height: calc(12px + 2.8vmin);
+  width: calc(150px + 2vmin);
+  justify-content: center;
+  align-items: center;
+  
+}
+
+.dadosUrl{
+  margin-top: 25px;
+}
+
+.tabela {
+  font-size: 20px;
+  border-collapse: collapse;
+  width: 100%;
+}
+
